z-index bug per firefox fixato

--- a/Frontend/css/style.styl
+++ b/Frontend/css/style.styl
@@ -24,12 +24,12 @@
   transition:         all 600ms cubic-bezier(0.77, 0, 0.175, 1);
 
 .overlay
-  display hidden
+  display none
   background #000
   position absolute
   width 100%
   height 100%
-  z-index 256
+  z-index 255
   opacity 0
   transition .6s
 
@@ -153,16 +153,16 @@
     position fixed
     top 0
     width 499px
-    z-index 1
+    z-index 256
 
 #famiglia-form
-  z-index 5
+  z-index 260
 #abitazione-form
-  z-index 4
+  z-index 259
 #trasporti-form
-  z-index 3
+  z-index 258
 #spostamenti-form
-  z-index 2
+  z-index 257
   
 
 //barra sponsor
@@ -172,7 +172,7 @@
   height 100%
   background light-grey
   padding-top .5em
-  z-index 255
+  z-index 254
   width 100px
 
   img
